@@ -6,6 +6,7 @@
 2021-07-31 -> ## lcd2004_i2c & poweroff stuff
 	      fix ctrl fifo handling
 	      add first content for lcd ctrl handling
+	      add signal handler thread to catch SIG_TERM (from ruint)
 
 2021-07-30 -> ## lcd2004_i2c stuff
 	      add first parts for ctrl fifo handling
